--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodejs-documentation",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start-dev": "cross-env PORT=3000 nodemon app.js",
     "start": "node app.js"
